# ainovel

./: .dockerignore  .editorconfig  .gitignore  BRANDING_OPTIONS.md  CHAT_POLISH_PLAN.md  DOCUMENTATION_INDEX.md  Makefile  PREMISE_BUILDER_COMPLETE.md  README.md  SEARCH_POLISH_COMPLETE.md  build.sh  docker-compose.yml  health-dashboard.html  nixpacks.toml  railway.json  test-premise.md  test_premise_builder.py
backend/: .env.example  Dockerfile  __init__.py  check_outline_fields.py  create_test_users.py  create_users_direct.py  init_auth_db.py  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  test_agent_system.py  test_auth.py
backend/api/: agents.py  auth.py  avatars.py  bulk_generation.py  chapters.py  chat.py  contexts.py  custom_avatars.py  export.py  genres.py  health.py  health_check.py  outlines.py  premise_builder.py  projects.py  seed.py  story_bible.py  summaries.py
backend/book_covers/: IMPLEMENTATION_PROGRESS.md  __init__.py  models.py  routes.py  schemas.py
backend/config/: settings.py
backend/models/: context.py  database.py  premise_builder.py  schemas.py
backend/services/: agent_base.py  ai_service.py  auth_service.py  avatar_base.py  chapter_service.py  character_developer_agent.py  character_developer_avatar.py  chat_service.py  context_builder.py  custom_avatar.py  debate_orchestrator.py  dialogue_coach_agent.py  dialogue_coach_avatar.py  editor_supreme_agent.py  editor_supreme_avatar.py  export_service.py  genre_service.py  mystery_master_agent.py  mystery_master_avatar.py  outline_service.py  plot_architect_agent.py  (+13 more)
(+145 files in other folders)
